# luma-images-linux

./: .gitignore  README.md  gallery_immersive_viewer_with_exif.html  gallery_justified_grid_classic.html  gallery_timeline_first_scrubber.html  pyproject.toml
src/simple_gallery/: __init__.py  app.py  database.py  desktop_install.py  file_operations.py  main_window.py  models.py  scanner.py  styles.py  thumbnails.py  viewer.py  widgets.py  window_chrome.py
src/simple_gallery/resources/: __init__.py  luma-gallery.desktop.in
tests/: test_core.py
